--- a/style.css
+++ b/style.css
@@ -1,3 +1,43 @@
-body{
-    
+*{
+    font-family: 'poppins', sans-serif;
+    box-sizing: border-box;
 }
+
+a{
+    text-decoration: none;
+    color: #5a5a5a;
+}
+
+img{
+    cursor: pointer;
+}
+
+/** Estilos para el Navabar*/
+
+.flexNavBar{
+    display: flex;
+    align-items: center;
+}
+
+nav{
+    padding: 2vw 2vw;
+    justify-content: space-between;
+    width: 100vw;
+    box-shadow: 0 0 1vw rgba(0, 0, 0, 0.2);
+    background-color: #fff;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+}
+
+.navSection3 img{
+    width: 2vw;
+    margin-right: 1vw;
+}
+
+.navSection3 .userIcon{
+    width: 3vw;
+    margin-right: 0;
+}
+
+
