--- a/style.css
+++ b/style.css
@@ -97,6 +97,10 @@ nav{
     margin-bottom: 1.2vw;
 }
 
+.shortcutsIcons p{
+    font-size: 1vw;
+}
+
 .bx{
     font-size: 2vw;
     margin-right: 1vw;
@@ -109,7 +113,9 @@ nav{
 
 
 .shortcutsIcons a:hover{
-    color:  #c4302b;
+    background-color: lightgray;
+    width: 12vw;
+    border-radius: 0.5vw;
     transition: color .3s ease, color .3s ease;
 }
 
@@ -127,6 +133,10 @@ nav{
     color: #5a5a5a;
 }
 
+.subscribedChanels p{
+    font-size: 1vw
+}
+
 .subscribedChanels a{
     display: flex;
     flex-wrap: wrap ;
@@ -134,6 +144,13 @@ nav{
     column-gap: 1vw;
     margin-bottom: 1.2vw;
     width: fit-content;
+}
+
+.subscribedChanels a:hover{
+    background-color: lightgray;
+    width: 12vw;
+    border-radius: 0.5vw;
+    transition: color .3s ease, color .3s ease;
 }
 
 .subscribedChanels img{
@@ -170,4 +187,6 @@ nav{
     width: 81vw;
     border-radius: 2vw;
 }
+
+/* */
 
