--- a/style.css
+++ b/style.css
@@ -341,6 +341,16 @@ nav{
     margin: 1vw 1vw;
 }
 
+.channelInfo{
+    display: flex;
+    align-items: center;
+    margin-top: 1.5vw;
+}
+
+.channelInfo div{
+    flex: 1;
+}
+
 /** MediaQuerys for tablets (800px - 1280px)*/
 
 @media (min-width:800px) and (max-width:1280px){
